--- a/ganttschema.html
+++ b/ganttschema.html
@@ -30,10 +30,12 @@
     </div>
   </nav>
 
-  <div class="gantt-wrapper">
-    <h1 id="page-title">Gantt-schema för säsongen</h1>
-    <div id="filters"></div>
-    <div id="gantt-container"></div>
+  <div class="page-wrapper">
+    <div class="gantt-wrapper">
+      <h1 id="page-title">Gantt-schema för säsongen</h1>
+      <div id="filters"></div>
+      <div id="gantt-container"></div>
+    </div>
   </div>
 
   <footer class="site-footer">
