--- a/ganttschema.html
+++ b/ganttschema.html
@@ -11,37 +11,41 @@
   <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.umd.js"></script>
 </head>
 <body>
-  <nav class="main-nav">
-    <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
-    <div class="nav-wrapper">
-      <button class="menu-toggle" aria-label="Meny">
-        <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
-          <rect width="100" height="10" rx="5"></rect>
-          <rect y="30" width="100" height="10" rx="5"></rect>
-          <rect y="60" width="100" height="10" rx="5"></rect>
-        </svg>
-      </button>
-      <ul class="nav-links">
-        <li><a href="index.html">Händelser</a></li>
-        <li><a href="packlista.html">Packlista</a></li>
-        <li><a href="budget.html">Budget</a></li>
-        <li><a href="gantt.html" class="active">Gantt-schema</a></li>
-      </ul>
-    </div>
-  </nav>
-
   <div class="page-wrapper">
-    <div class="gantt-wrapper">
-      <h1 id="page-title">Gantt-schema för säsongen</h1>
-      <div id="filters"></div>
-      <div id="gantt-container"></div>
-    </div>
-  </div>
+    <nav class="main-nav">
+      <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
+      <div class="nav-wrapper">
+        <button class="menu-toggle" aria-label="Meny">
+          <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
+            <rect width="100" height="10" rx="5"></rect>
+            <rect y="30" width="100" height="10" rx="5"></rect>
+            <rect y="60" width="100" height="10" rx="5"></rect>
+          </svg>
+        </button>
+        <ul class="nav-links">
+          <li><a href="index.html">Händelser</a></li>
+          <li><a href="packlista.html">Packlista</a></li>
+          <li><a href="budget.html">Budget</a></li>
+          <li><a href="gantt.html" class="active">Gantt-schema</a></li>
+        </ul>
+      </div>
+    </nav>
 
-  <footer class="site-footer">
-    <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
-    <span class="footer-text">Developed by Beaver Consulting</span>
-  </footer>
+    <main class="main-content">
+      <div class="gantt-wrapper">
+        <h1 id="page-title">Gantt-schema för säsongen</h1>
+        <div id="filters"></div>
+        <div id="gantt-container"></div>
+      </div>
+    </main>
+
+    <footer class="site-footer">
+      <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
+      <span class="footer-text">Developed by Beaver Consulting</span>
+    </footer>
+  </div>
+</body>
+
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -169,47 +173,49 @@
     }
 
     function renderGantt() {
-      const season = document.getElementById('season-filter').value;
-      const type = document.getElementById('type-filter').value;
-
-      const filtered = allEvents
-        .filter(e => (!season || e['Säsong'] === season))
-        .filter(e => (!type || e['Typ av händelse'] === type))
-        .sort((a, b) => new Date(a['Datum från']) - new Date(b['Datum från']));
-
-      const tasks = filtered.map(e => ({
-        id: e['Namn på händelse'],
-        name: e['Namn på händelse'],
-        start: e['Datum från'],
-        end: adjustEndDate(e['Datum till'] || e['Datum från']),
-        progress: 0,
-        type: e['Typ av händelse']
-      }));
-
-      document.getElementById('gantt-container').innerHTML = '';
-      if (tasks.length > 0) {
-        const minDate = new Date(Math.min(...tasks.map(t => new Date(t.start).getTime())));
-        const maxDate = new Date(Math.max(...tasks.map(t => new Date(t.end).getTime())));
-      
-        const gantt = new Gantt('#gantt-container', tasks, {
-          view_mode: currentViewMode,
-          bar_height: 30,
-          lines: 'vertical',
-          start: minDate,
-          end: maxDate
+    const season = document.getElementById('season-filter').value;
+    const type = document.getElementById('type-filter').value;
+  
+    const filtered = allEvents
+      .filter(e => (!season || e['Säsong'] === season))
+      .filter(e => (!type || e['Typ av händelse'] === type))
+      .sort((a, b) => new Date(a['Datum från']) - new Date(b['Datum från']));
+  
+    const tasks = filtered.map(e => ({
+      id: e['Namn på händelse'],
+      name: e['Namn på händelse'],
+      start: e['Datum från'],
+      end: adjustEndDate(e['Datum till'] || e['Datum från']),
+      progress: 0,
+      type: e['Typ av händelse']
+    }));
+  
+    document.getElementById('gantt-container').innerHTML = '';
+    if (tasks.length > 0) {
+      const startDates = tasks.map(t => new Date(t.start));
+      const endDates = tasks.map(t => new Date(t.end));
+      const minDate = new Date(Math.min(...startDates));
+      const maxDate = new Date(Math.max(...endDates));
+  
+      const gantt = new Gantt('#gantt-container', tasks, {
+        view_mode: currentViewMode,
+        bar_height: 30,
+        lines: 'vertical',
+        start: minDate,
+        end: maxDate
+      });
+  
+      tasks.forEach(task => {
+        const bars = document.querySelectorAll(`.bar-${CSS.escape(task.id)} rect`);
+        bars.forEach(rect => {
+          rect.style.fill = colorMap[task.type] || '#CCCCCC';
         });
-
-
-        tasks.forEach(task => {
-          const bars = document.querySelectorAll(`.bar-${CSS.escape(task.id)} rect`);
-          bars.forEach(rect => {
-            rect.style.fill = colorMap[task.type] || '#CCCCCC';
-          });
-        });
-      } else {
-        document.getElementById('gantt-container').innerHTML = '<p style="text-align:center; padding:2rem;">Inga händelser att visa</p>';
-      }
+      });
+    } else {
+      document.getElementById('gantt-container').innerHTML = '<p style="text-align:center; padding:2rem;">Inga händelser att visa</p>';
     }
+  }
+
 
     document.addEventListener('DOMContentLoaded', loadEvents);
   </script>
