--- a/ganttschema.html
+++ b/ganttschema.html
@@ -11,41 +11,36 @@
   <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.umd.js"></script>
 </head>
 <body>
-  <div class="page-wrapper">
-    <nav class="main-nav">
-      <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
-      <div class="nav-wrapper">
-        <button class="menu-toggle" aria-label="Meny">
-          <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
-            <rect width="100" height="10" rx="5"></rect>
-            <rect y="30" width="100" height="10" rx="5"></rect>
-            <rect y="60" width="100" height="10" rx="5"></rect>
-          </svg>
-        </button>
-        <ul class="nav-links">
-          <li><a href="index.html">Händelser</a></li>
-          <li><a href="packlista.html">Packlista</a></li>
-          <li><a href="budget.html">Budget</a></li>
-          <li><a href="gantt.html" class="active">Gantt-schema</a></li>
-        </ul>
-      </div>
-    </nav>
 
-    <main class="main-content">
-      <div class="gantt-wrapper">
-        <h1 id="page-title">Gantt-schema för säsongen</h1>
-        <div id="filters"></div>
-        <div id="gantt-container"></div>
-      </div>
-    </main>
+  <nav class="main-nav">
+    <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
+    <div class="nav-wrapper">
+      <button class="menu-toggle" aria-label="Meny">
+        <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
+          <rect width="100" height="10" rx="5"></rect>
+          <rect y="30" width="100" height="10" rx="5"></rect>
+          <rect y="60" width="100" height="10" rx="5"></rect>
+        </svg>
+      </button>
+      <ul class="nav-links">
+        <li><a href="index.html">Händelser</a></li>
+        <li><a href="packlista.html">Packlista</a></li>
+        <li><a href="budget.html">Budget</a></li>
+        <li><a href="gantt.html" class="active">Gantt-schema</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <footer class="site-footer">
-      <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
-      <span class="footer-text">Developed by Beaver Consulting</span>
-    </footer>
+  <div class="gantt-wrapper">
+    <h1 id="page-title">Gantt-schema för säsongen</h1>
+    <div id="filters"></div>
+    <div id="gantt-container"></div>
   </div>
-</body>
 
+  <footer class="site-footer">
+    <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
+    <span class="footer-text">Developed by Beaver Consulting</span>
+  </footer>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -62,9 +57,7 @@
         });
       });
     });
-  </script>
 
-  <script>
     const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQwy0b0RMcUXo3xguOtukMryHNlYnebQdskaIWHXr3POx7fg9NfUHsMTGjOlDnkOJZybrWZ7r36NfB1/pub?output=csv';
     let allEvents = [];
     let colorMap = {};
@@ -173,51 +166,44 @@
     }
 
     function renderGantt() {
-    const season = document.getElementById('season-filter').value;
-    const type = document.getElementById('type-filter').value;
-  
-    const filtered = allEvents
-      .filter(e => (!season || e['Säsong'] === season))
-      .filter(e => (!type || e['Typ av händelse'] === type))
-      .sort((a, b) => new Date(a['Datum från']) - new Date(b['Datum från']));
-  
-    const tasks = filtered.map(e => ({
-      id: e['Namn på händelse'],
-      name: e['Namn på händelse'],
-      start: e['Datum från'],
-      end: adjustEndDate(e['Datum till'] || e['Datum från']),
-      progress: 0,
-      type: e['Typ av händelse']
-    }));
-  
-    document.getElementById('gantt-container').innerHTML = '';
-    if (tasks.length > 0) {
-      const startDates = tasks.map(t => new Date(t.start));
-      const endDates = tasks.map(t => new Date(t.end));
-      const minDate = new Date(Math.min(...startDates));
-      const maxDate = new Date(Math.max(...endDates));
-  
-      const gantt = new Gantt('#gantt-container', tasks, {
-        view_mode: currentViewMode,
-        bar_height: 30,
-        lines: 'vertical',
-        start: minDate,
-        end: maxDate
-      });
-  
-      tasks.forEach(task => {
-        const bars = document.querySelectorAll(`.bar-${CSS.escape(task.id)} rect`);
-        bars.forEach(rect => {
-          rect.style.fill = colorMap[task.type] || '#CCCCCC';
-        });
-      });
-    } else {
-      document.getElementById('gantt-container').innerHTML = '<p style="text-align:center; padding:2rem;">Inga händelser att visa</p>';
-    }
-  }
+      const season = document.getElementById('season-filter').value;
+      const type = document.getElementById('type-filter').value;
 
+      const filtered = allEvents
+        .filter(e => (!season || e['Säsong'] === season))
+        .filter(e => (!type || e['Typ av händelse'] === type))
+        .sort((a, b) => new Date(a['Datum från']) - new Date(b['Datum från']));
+
+      const tasks = filtered.map(e => ({
+        id: e['Namn på händelse'],
+        name: e['Namn på händelse'],
+        start: e['Datum från'],
+        end: adjustEndDate(e['Datum till'] || e['Datum från']),
+        progress: 0,
+        type: e['Typ av händelse']
+      }));
+
+      document.getElementById('gantt-container').innerHTML = '';
+      if (tasks.length > 0) {
+        const gantt = new Gantt('#gantt-container', tasks, {
+          view_mode: currentViewMode,
+          bar_height: 30,
+          lines: 'vertical'
+        });
+
+        tasks.forEach(task => {
+          const bars = document.querySelectorAll(`.bar-${CSS.escape(task.id)} rect`);
+          bars.forEach(rect => {
+            rect.style.fill = colorMap[task.type] || '#CCCCCC';
+          });
+        });
+      } else {
+        document.getElementById('gantt-container').innerHTML = '<p style="text-align:center; padding:2rem;">Inga händelser att visa</p>';
+      }
+    }
 
     document.addEventListener('DOMContentLoaded', loadEvents);
   </script>
+
 </body>
 </html>
