--- a/ganttschema.html
+++ b/ganttschema.html
@@ -7,203 +7,44 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="gantt.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css" />
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.umd.js"></script>
 </head>
 <body>
+  <div class="page-wrapper">
+    <nav class="main-nav">
+      <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
+      <div class="nav-wrapper">
+        <button class="menu-toggle" aria-label="Meny">
+          <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
+            <rect width="100" height="10" rx="5"></rect>
+            <rect y="30" width="100" height="10" rx="5"></rect>
+            <rect y="60" width="100" height="10" rx="5"></rect>
+          </svg>
+        </button>
+        <ul class="nav-links">
+          <li><a href="index.html">Händelser</a></li>
+          <li><a href="packlista.html">Packlista</a></li>
+          <li><a href="budget.html">Budget</a></li>
+          <li><a href="gantt.html" class="active">Gantt-schema</a></li>
+        </ul>
+      </div>
+    </nav>
 
-  <nav class="main-nav">
-    <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
-    <div class="nav-wrapper">
-      <button class="menu-toggle" aria-label="Meny">
-        <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
-          <rect width="100" height="10" rx="5"></rect>
-          <rect y="30" width="100" height="10" rx="5"></rect>
-          <rect y="60" width="100" height="10" rx="5"></rect>
-        </svg>
-      </button>
-      <ul class="nav-links">
-        <li><a href="index.html">Händelser</a></li>
-        <li><a href="packlista.html">Packlista</a></li>
-        <li><a href="budget.html">Budget</a></li>
-        <li><a href="gantt.html" class="active">Gantt-schema</a></li>
-      </ul>
-    </div>
-  </nav>
+    <main class="main-content">
+      <div class="gantt-wrapper">
+        <h1 id="page-title">Gantt-schema för säsongen</h1>
+        <div id="filters"></div>
+        <div id="gantt-container"></div>
+      </div>
+    </main>
 
-  <div class="gantt-wrapper">
-    <h1 id="page-title">Gantt-schema för säsongen</h1>
-    <div id="filters"></div>
-    <div id="gantt-container"></div>
+    <footer class="site-footer">
+      <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
+      <span class="footer-text">Developed by Beaver Consulting</span>
+    </footer>
   </div>
 
-  <footer class="site-footer">
-    <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
-    <span class="footer-text">Developed by Beaver Consulting</span>
-  </footer>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const toggleBtn = document.querySelector(".menu-toggle");
-      const navLinks = document.querySelector(".nav-links");
-
-      toggleBtn.addEventListener("click", () => {
-        navLinks.classList.toggle("open");
-      });
-
-      document.querySelectorAll(".nav-links a").forEach(link => {
-        link.addEventListener("click", () => {
-          navLinks.classList.remove("open");
-        });
-      });
-    });
-
-    const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQwy0b0RMcUXo3xguOtukMryHNlYnebQdskaIWHXr3POx7fg9NfUHsMTGjOlDnkOJZybrWZ7r36NfB1/pub?output=csv';
-    let allEvents = [];
-    let colorMap = {};
-    let currentViewMode = 'Day';
-
-    const colorPalette = ['#4CAF50', '#2196F3', '#FF9800', '#9C27B0', '#E91E63', '#00BCD4', '#8BC34A', '#FFC107', '#3F51B5', '#009688'];
-
-    function getCurrentSeason() {
-      const today = new Date();
-      const year = today.getFullYear();
-      const month = today.getMonth() + 1;
-      if (year === 2025 && month >= 5) return '2025-2026';
-      return month >= 7 ? `${year}-${year + 1}` : `${year - 1}-${year}`;
-    }
-
-    function adjustEndDate(dateString) {
-      if (!dateString) return null;
-      const date = new Date(dateString);
-      date.setDate(date.getDate() + 1);
-      return date.toISOString().split('T')[0];
-    }
-
-    function assignColors() {
-      const types = [...new Set(allEvents.map(e => e['Typ av händelse']))].filter(Boolean);
-      types.forEach((type, index) => {
-        colorMap[type] = colorPalette[index % colorPalette.length];
-      });
-    }
-
-    function loadEvents() {
-      fetch(SHEET_URL)
-        .then(res => res.text())
-        .then(csvText => {
-          Papa.parse(csvText, {
-            header: true,
-            skipEmptyLines: true,
-            complete: function(results) {
-              allEvents = results.data.filter(e => e['Datum från']);
-              assignColors();
-              setupFilters();
-              setupViewButtons();
-              renderGantt();
-            }
-          });
-        });
-    }
-
-    function setupFilters() {
-      const filtersDiv = document.getElementById('filters');
-      filtersDiv.innerHTML = '';
-
-      const seasonSelect = document.createElement('select');
-      seasonSelect.id = 'season-filter';
-      const seasonOptionAll = document.createElement('option');
-      seasonOptionAll.value = '';
-      seasonOptionAll.textContent = 'Alla säsonger';
-      seasonSelect.appendChild(seasonOptionAll);
-      [...new Set(allEvents.map(e => e['Säsong']))].sort().reverse().forEach(season => {
-        const option = document.createElement('option');
-        option.value = season;
-        option.textContent = season;
-        seasonSelect.appendChild(option);
-      });
-      seasonSelect.value = getCurrentSeason();
-
-      const typeSelect = document.createElement('select');
-      typeSelect.id = 'type-filter';
-      const typeOptionAll = document.createElement('option');
-      typeOptionAll.value = '';
-      typeOptionAll.textContent = 'Alla typer';
-      typeSelect.appendChild(typeOptionAll);
-      [...new Set(allEvents.map(e => e['Typ av händelse']))].sort().forEach(type => {
-        const option = document.createElement('option');
-        option.value = type;
-        option.textContent = type;
-        typeSelect.appendChild(option);
-      });
-
-      filtersDiv.appendChild(seasonSelect);
-      filtersDiv.appendChild(typeSelect);
-
-      seasonSelect.addEventListener('change', renderGantt);
-      typeSelect.addEventListener('change', renderGantt);
-    }
-
-    function setupViewButtons() {
-      const filtersDiv = document.getElementById('filters');
-      const viewButtonsDiv = document.createElement('div');
-      viewButtonsDiv.classList.add('view-buttons');
-
-      [['Day', 'Dag'], ['Week', 'Vecka'], ['Month', 'Månad']].forEach(([mode, label]) => {
-        const btn = document.createElement('button');
-        btn.textContent = label;
-        btn.dataset.mode = mode;
-        btn.classList.toggle('active', mode === currentViewMode);
-        btn.addEventListener('click', () => {
-          currentViewMode = mode;
-          document.querySelectorAll('.view-buttons button').forEach(b => b.classList.remove('active'));
-          btn.classList.add('active');
-          renderGantt();
-        });
-        viewButtonsDiv.appendChild(btn);
-      });
-
-      filtersDiv.appendChild(viewButtonsDiv);
-    }
-
-    function renderGantt() {
-      const season = document.getElementById('season-filter').value;
-      const type = document.getElementById('type-filter').value;
-
-      const filtered = allEvents
-        .filter(e => (!season || e['Säsong'] === season))
-        .filter(e => (!type || e['Typ av händelse'] === type))
-        .sort((a, b) => new Date(a['Datum från']) - new Date(b['Datum från']));
-
-      const tasks = filtered.map(e => ({
-        id: e['Namn på händelse'],
-        name: e['Namn på händelse'],
-        start: e['Datum från'],
-        end: adjustEndDate(e['Datum till'] || e['Datum från']),
-        progress: 0,
-        type: e['Typ av händelse']
-      }));
-
-      document.getElementById('gantt-container').innerHTML = '';
-      if (tasks.length > 0) {
-        const gantt = new Gantt('#gantt-container', tasks, {
-          view_mode: currentViewMode,
-          bar_height: 30,
-          lines: 'vertical'
-        });
-
-        tasks.forEach(task => {
-          const bars = document.querySelectorAll(`.bar-${CSS.escape(task.id)} rect`);
-          bars.forEach(rect => {
-            rect.style.fill = colorMap[task.type] || '#CCCCCC';
-          });
-        });
-      } else {
-        document.getElementById('gantt-container').innerHTML = '<p style="text-align:center; padding:2rem;">Inga händelser att visa</p>';
-      }
-    }
-
-    document.addEventListener('DOMContentLoaded', loadEvents);
-  </script>
-
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.umd.js"></script>
+  <script src="gantt.js"></script>
 </body>
 </html>
