--- a/ganttschema.html
+++ b/ganttschema.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css" />
 </head>
 <body>
-  <div class="page-wrapper">
+  <div class="page-wrapper full-width">
     <nav class="main-nav">
       <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
       <div class="nav-wrapper">
