--- a/index.html
+++ b/index.html
@@ -5,48 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Händelser</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="menu.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <nav class="main-nav">
-    <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
-    <div class="nav-wrapper">
-      <button class="menu-toggle" aria-label="Meny">
-        <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
-          <rect width="100" height="10" rx="5"></rect>
-          <rect y="30" width="100" height="10" rx="5"></rect>
-          <rect y="60" width="100" height="10" rx="5"></rect>
-        </svg>
-      </button>
-      <ul class="nav-links">
-        <li><a href="index.html" class="active">Händelser</a></li>
-        <li><a href="packlista.html">Packlista</a></li>
-        <li><a href="budget.html">Budget</a></li>
-      </ul>
-    </div>
-  </nav>
+  <div id="menu-placeholder"></div>
 
   <h1 id="page-title">Händelser</h1>
 
   <div id="event-container"></div>
 
   <script src="data.js"></script>
+
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const toggleBtn = document.querySelector(".menu-toggle");
-      const navLinks = document.querySelector(".nav-links");
-
-      toggleBtn.addEventListener("click", () => {
-        navLinks.classList.toggle("open");
+    // Ladda in gemensam meny
+    fetch("menu.html")
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("menu-placeholder").innerHTML = html;
       });
-
-      document.querySelectorAll(".nav-links a").forEach(link => {
-        link.addEventListener("click", () => {
-          navLinks.classList.remove("open");
-        });
-      });
-    });
   </script>
+
   <footer class="site-footer">
     <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
     <span class="footer-text">Developed by Beaver Consulting</span>
