--- a/ganttschema.html
+++ b/ganttschema.html
@@ -6,28 +6,12 @@
   <title>Gantt-schema för säsongen</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="gantt.css" />
+  <link rel="stylesheet" href="menu.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css" />
 </head>
 <body class="gantt-page">
   <div class="page-wrapper full-width">
-    <nav class="main-nav">
-      <img src="Logotyp1.jpg" alt="Föreningens logotyp" class="nav-logo" />
-      <div class="nav-wrapper">
-        <button class="menu-toggle" aria-label="Meny">
-          <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
-            <rect width="100" height="10" rx="5"></rect>
-            <rect y="30" width="100" height="10" rx="5"></rect>
-            <rect y="60" width="100" height="10" rx="5"></rect>
-          </svg>
-        </button>
-        <ul class="nav-links">
-          <li><a href="index.html">Händelser</a></li>
-          <li><a href="packlista.html">Packlista</a></li>
-          <li><a href="budget.html">Budget</a></li>
-          <li><a href="gantt.html" class="active">Gantt-schema</a></li>
-        </ul>
-      </div>
-    </nav>
+    <div id="menu-placeholder"></div>
 
     <main class="main-content">
       <div class="gantt-wrapper">
@@ -46,5 +30,39 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.umd.js"></script>
   <script src="gantt.js"></script>
+
+  <script>
+    // Ladda in gemensam meny
+    fetch("menu.html")
+      .then(res => res.text())
+      .then(html => {
+        const menuContainer = document.getElementById("menu-placeholder");
+        menuContainer.innerHTML = html;
+
+        // Markera aktuell sida som aktiv
+        const currentPath = window.location.pathname.split("/").pop();
+        const links = menuContainer.querySelectorAll(".nav-links a");
+        links.forEach(link => {
+          const href = link.getAttribute("href");
+          if (href === currentPath) {
+            link.classList.add("active");
+          }
+        });
+
+        // Aktivera hamburgermenyn
+        const toggleBtn = menuContainer.querySelector(".menu-toggle");
+        const navLinks = menuContainer.querySelector(".nav-links");
+
+        toggleBtn?.addEventListener("click", () => {
+          navLinks.classList.toggle("open");
+        });
+
+        links.forEach(link => {
+          link.addEventListener("click", () => {
+            navLinks.classList.remove("open");
+          });
+        });
+      });
+  </script>
 </body>
 </html>
