--- a/ganttschema.html
+++ b/ganttschema.html
@@ -11,6 +11,7 @@
 </head>
 <body class="gantt-page">
   <div class="page-wrapper full-width">
+    <!-- Menyn laddas in på rätt plats -->
     <div id="menu-placeholder"></div>
 
     <main class="main-content">
