--- a/ganttschema.html
+++ b/ganttschema.html
@@ -16,7 +16,7 @@
 
     <main class="main-content">
       <div class="gantt-wrapper">
-        <h1 id="page-title">Gantt-schema för säsongen</h1>
+        <h1 id="page-title">Säsongsöversikt</h1>
         <div id="filters"></div>
         <div id="gantt-container"></div>
       </div>
