--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
       <li><a href="index.html">Händelser</a></li>
       <li><a href="packlista.html">Packlista</a></li>
       <li><a href="budget.html">Budget</a></li>
-      <li><a href="ganttschema.html">Gantt-schema</a></li>
+      <li><a href="ganttschema.html">Säsongsöversikt</a></li>
     </ul>
   </div>
 </nav>
