--- a/packlista/index.html
+++ b/packlista/index.html
@@ -1,1 +1,127 @@
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Packlista för Handbollscup</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="menu.css" />
+</head>
+<body>
+  <div id="menu-placeholder"></div>
 
+  <h1 id="page-title">Packlista: Övernattning i klassrum</h1>
+  <p style="font-weight:bold; margin-left:0.5rem;">(Fri från nötter)</p>
+
+  <div class="event-group">
+    <div class="event-card">
+      <h2 class="event-title">📦 Viktigast (måste-ha)</h2>
+      <ul>
+        <li>Handbollskläder: matchtröja, shorts, strumpor (gärna flera uppsättningar)</li>
+        <li>Handbollsskor</li>
+        <li>Vattenflaska</li>
+        <li>Handboll</li>
+        <li>Kneepads (om du brukar använda)</li>
+        <li>Matchtröjan + reservtröja (om klubben har)</li>
+        <li>Träningskläder (för ev. uppvärmning/andra aktiviteter)</li>
+      </ul>
+    </div>
+
+    <div class="event-card">
+      <h2 class="event-title">😴 Sova i klassrum</h2>
+      <ul>
+        <li>Madrass/liggunderlag (gärna uppblåsbar för komfort)</li>
+        <li>Sängkläder</li>
+        <li>Lakan att lägga under luftmadrass</li>
+        <li>Sovsäck eller täcke & kudde</li>
+        <li>Pyjamas / mjukiskläder</li>
+        <li>Ögonmask + öronproppar (bra om det är ljust eller stökigt)</li>
+        <li>Filt (extra, kan vara skönt)</li>
+      </ul>
+    </div>
+
+    <div class="event-card">
+      <h2 class="event-title">🧴 Hygien & personlig packning</h2>
+      <ul>
+        <li>Tandborste & tandkräm</li>
+        <li>Deodorant</li>
+        <li>Duschgrejer: schampo, tvål, handduk</li>
+        <li>Hårborste / hårsnoddar</li>
+        <li>Ev. mediciner (t.ex. allergitabletter, astmainhalator)</li>
+        <li>Plåster / tejp (bra att ha!)</li>
+      </ul>
+    </div>
+
+    <div class="event-card">
+      <h2 class="event-title">👕 Kläder utanför planen</h2>
+      <ul>
+        <li>Ombyte för kvällen (t.ex. mjukiskläder)</li>
+        <li>Underkläder & strumpor (extra!)</li>
+        <li>Jacka & regnkläder (beroende på väder)</li>
+        <li>Gympaskor</li>
+      </ul>
+    </div>
+
+    <div class="event-card">
+      <h2 class="event-title">🍏 Mat & snacks</h2>
+      <ul>
+        <li>Frukt (banan, äpple, päron)</li>
+        <li>Bars utan nötter</li>
+        <li>Kex, riskakor, eller liknande</li>
+        <li>Vattenflaska (påfyllbar)</li>
+      </ul>
+    </div>
+
+    <div class="event-card">
+      <h2 class="event-title">🎒 Övrigt & bra-att-ha</h2>
+      <ul>
+        <li>Laddare till mobil</li>
+        <li>Powerbank (om lång dag utan laddning)</li>
+        <li>Kortlek eller småspel (för downtime)</li>
+        <li>Plastpåse för smutstvätt</li>
+        <li>Klubbsaker (flagga, maskot, etc.)</li>
+        <li>Ev. pengar till kiosk</li>
+        <li>Ev. anteckningsbok/penna (om tränarna vill att ni antecknar)</li>
+      </ul>
+    </div>
+  </div>
+
+  <footer class="site-footer">
+    <img src="beaver-logo.png" alt="Beaver Consulting logotyp" class="footer-logo" />
+    <span class="footer-text">Developed by Beaver Consulting</span>
+  </footer>
+
+  <script>
+    fetch("menu.html")
+      .then(res => res.text())
+      .then(html => {
+        const menuContainer = document.getElementById("menu-placeholder");
+        menuContainer.innerHTML = html;
+
+        // Markera aktuell sida som aktiv
+        const currentPath = window.location.pathname.split("/").pop();
+        const links = menuContainer.querySelectorAll(".nav-links a");
+        links.forEach(link => {
+          const href = link.getAttribute("href");
+          if (href === currentPath) {
+            link.classList.add("active");
+          }
+        });
+
+        // Aktivera hamburgermenyn
+        const toggleBtn = menuContainer.querySelector(".menu-toggle");
+        const navLinks = menuContainer.querySelector(".nav-links");
+
+        toggleBtn?.addEventListener("click", () => {
+          navLinks.classList.toggle("open");
+        });
+
+        links.forEach(link => {
+          link.addEventListener("click", () => {
+            navLinks.classList.remove("open");
+          });
+        });
+      });
+  </script>
+</body>
+</html>
