--- a/menu.html
+++ b/menu.html
@@ -10,9 +10,9 @@
     </button>
     <ul class="nav-links">
       <li><a href="index.html">Händelser</a></li>
-      <li><a href="packlista.html">Packlista</a></li>
-      <li><a href="budget.html">Budget</a></li>
-      <li><a href="ganttschema.html">Säsongsöversikt</a></li>
+      <li><a href="packlista/">Packlista</a></li>
+      <li><a href="budget/">Budget</a></li>
+      <li><a href="sasongsoversikt/">Säsongsöversikt</a></li>
     </ul>
   </div>
 </nav>
