--- a/sasongsoversikt.html
+++ b/sasongsoversikt.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="gantt.css" />
   <link rel="stylesheet" href="menu.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css" />
+  <style>
+    /* Osynliga filterelement, endast för att undvika JS-fel */
+    #season-filter, #type-filter-dropdown {
+      display: none;
+    }
+  </style>
 </head>
 <body class="gantt-page">
   <div class="page-wrapper full-width">
@@ -18,12 +24,11 @@
       <div class="gantt-wrapper">
         <h1 id="page-title">Säsongsöversikt</h1>
 
+        <!-- Osynliga filterelement för att undvika JS-fel -->
         <div id="filters">
-          <label for="season-filter">Säsong:</label>
           <select id="season-filter"></select>
-
           <div id="type-filter-dropdown">
-            <button id="type-filter-button">Välj typ av händelse</button>
+            <button id="type-filter-button">Välj typ</button>
             <div id="type-options" class="type-options"></div>
           </div>
         </div>
