--- a/sasongsoversikt.html
+++ b/sasongsoversikt.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gantt-schema för säsongen</title>
+  <title>Säsongsöversikt</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="gantt.css" />
   <link rel="stylesheet" href="menu.css" />
