--- a/packlista.html
+++ b/packlista.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Packlista för Handbollscup</title>
+  <title>Packlista</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="menu.css" />
 </head>
