--- a/budget.html
+++ b/budget.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Budget</title>
+  <link rel="icon" type="image/png" href="favicon.jpg">
   <link rel="stylesheet" href="Styles_budget.css" />
   <link rel="stylesheet" href="menu.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
