--- a/packlista.html
+++ b/packlista.html
@@ -11,78 +11,42 @@
 <body>
   <div id="menu-placeholder"></div>
 
-  <h1 id="page-title">Packlista: Övernattning i klassrum</h1>
-  <p style="font-weight:bold; margin-left:0.5rem;">(Fri från nötter)</p>
+  <h1 id="page-title">Packlista</h1>
+  <p style="font-weight:bold; margin-left:0.5rem;">(packa i en egen liten väska så den är klar inför fredagens match)</p>
 
   <div class="event-group">
     <div class="event-card">
-      <h2 class="event-title">📦 Viktigast (måste-ha)</h2>
+      <h2 class="event-title">👜 Lilla väskan</h2>
       <ul>
-        <li>Handbollskläder: matchtröja, shorts, strumpor (gärna flera uppsättningar)</li>
-        <li>Handbollsskor</li>
-        <li>Vattenflaska</li>
-        <li>Handboll</li>
-        <li>Kneepads (om du brukar använda)</li>
-        <li>Matchtröjan + reservtröja (om klubben har)</li>
-        <li>Träningskläder (för ev. uppvärmning/andra aktiviteter)</li>
+        <li>Skor till handbollen</li>
+        <li>Strumpor att spela i (flera par)</li>
+        <li>Överdragskläder (HHF)</li>
+        <li>VATTENFLASKA</li>
+        <li>Kläder efter duschen</li>
+        <li>Underkläder</li>
+        <li>Schampo, tvål, balsam</li>
+        <li>Deo mm.</li>
+        <li>Hårsnoddar</li>
       </ul>
     </div>
 
     <div class="event-card">
-      <h2 class="event-title">😴 Sova i klassrum</h2>
+      <h2 class="event-title">🧳 Stora väskan</h2>
       <ul>
-        <li>Madrass/liggunderlag (gärna uppblåsbar för komfort)</li>
-        <li>Sängkläder</li>
-        <li>Lakan att lägga under luftmadrass</li>
-        <li>Sovsäck eller täcke & kudde</li>
-        <li>Pyjamas / mjukiskläder</li>
-        <li>Ögonmask + öronproppar (bra om det är ljust eller stökigt)</li>
-        <li>Filt (extra, kan vara skönt)</li>
-      </ul>
-    </div>
-
-    <div class="event-card">
-      <h2 class="event-title">🧴 Hygien & personlig packning</h2>
-      <ul>
-        <li>Tandborste & tandkräm</li>
-        <li>Deodorant</li>
-        <li>Duschgrejer: schampo, tvål, handduk</li>
-        <li>Hårborste / hårsnoddar</li>
-        <li>Ev. mediciner (t.ex. allergitabletter, astmainhalator)</li>
-        <li>Plåster / tejp (bra att ha!)</li>
-      </ul>
-    </div>
-
-    <div class="event-card">
-      <h2 class="event-title">👕 Kläder utanför planen</h2>
-      <ul>
-        <li>Ombyte för kvällen (t.ex. mjukiskläder)</li>
-        <li>Underkläder & strumpor (extra!)</li>
-        <li>Jacka & regnkläder (beroende på väder)</li>
-        <li>Gympaskor</li>
-      </ul>
-    </div>
-
-    <div class="event-card">
-      <h2 class="event-title">🍏 Mat & snacks</h2>
-      <ul>
-        <li>Frukt (banan, äpple, päron)</li>
-        <li>Bars utan nötter</li>
-        <li>Kex, riskakor, eller liknande</li>
-        <li>Vattenflaska (påfyllbar)</li>
-      </ul>
-    </div>
-
-    <div class="event-card">
-      <h2 class="event-title">🎒 Övrigt & bra-att-ha</h2>
-      <ul>
-        <li>Laddare till mobil</li>
-        <li>Powerbank (om lång dag utan laddning)</li>
-        <li>Kortlek eller småspel (för downtime)</li>
-        <li>Plastpåse för smutstvätt</li>
-        <li>Klubbsaker (flagga, maskot, etc.)</li>
-        <li>Ev. pengar till kiosk</li>
-        <li>Ev. anteckningsbok/penna (om tränarna vill att ni antecknar)</li>
+        <li>Underkläder</li>
+        <li>Vanliga kläder</li>
+        <li>Norden cup tröjan</li>
+        <li>Kudde</li>
+        <li>Sovsäck / täcke / filt</li>
+        <li>Lakan</li>
+        <li>Madrass</li>
+        <li>Tofflor</li>
+        <li>Sköna skor (vi kommer att gå mellan skolan och hallarna)</li>
+        <li>Jacka</li>
+        <li>Paraply ☂️</li>
+        <li>Skarvsladd</li>
+        <li>Bars / frukt / riskakor eller annat att fylla på med</li>
+        <li>Ett glatt humör 😎⭐️</li>
       </ul>
     </div>
   </div>
