--- a/gantt.html
+++ b/gantt.html
@@ -37,7 +37,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.umd.js"></script>
+  <script src="frappe-gantt.umd.js"></script>
   <script src="gantt.js"></script>
 </body>
 </html>
